# BasicFS

./: CMakeLists.txt  Makefile  README.md  a.out  bfs  bfs.h  bfs_functs.c  disk_util.c  main.c  test.c  ttt.c  write_test.c
.libs/: bfs  hello  lt-bfs
